<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bernard</string>
    <string name="app_description">Zorro\'s mute servant</string>
    <string name="bernardo_description">Bernard will advise you when you are coming and he is always ready to open your doors</string>
    <string name="action_settings">Settings</string>
    <string name="company_name">extrategy</string>
    <string name="open">I\'m opening the door...</string>
    <string name="success_door">The door is open</string>
    <string name="success_gate">The gate is open</string>
    <string name="error">Error, check your connection</string>
    <string name="ip_hint">Address</string>
    <string name="port_hint">Port</string>
    <string name="params_id_hint">Id</string>
    <string name="params_cs_hint">Cs</string>
    <string name="path_hint">Path</string>
    <string name="notification_channel_default">default Channel</string>
    <string name="notification_title">Welcome</string>
    <string name="notification_body">Do you want open the door?</string>

    <string name="btn_door">Door</string>
    <string name="btn_gate">Gate</string>

    <string name="alert_door_title">Are you sure?</string>
    <string name="alert_door_message">You are not in proximity of extrategy. Do you want open the door?</string>
    <string name="alert_gate_title">Are you sure?</string>
    <string name="alert_gate_message">You are not in proximity of extrategy. Do you want open the gate?</string>

    <string name="ok_door">Yes, open the door</string>
    <string name="ok_gate">Yes, open the gate</string>

    <string name="cancel">Cancel</string>

    <string name="widget_disabled">I am sleeping</string>
</resources>